style.css
@import url("https://fonts.googleapis.com/css2?family=Changa:wght@700&family=Space+Mono&display=swap");

/* CSS Reset */
html {
	font-size: 16px;
	line-height: 1.5;
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
	margin: 0;
	padding: 0;
}

ol,
ul {
	list-style: none;
}

/* VARIABLES */

:root {
	/* colors */
	--dark: #00070b;
	--primary: #cb48b7;
	--secondary: #ffba49;
	--light: #ececfe;

	/* fonts */
	--font-default: "Space Mono", monospace;
	--font-decorative: "Changa", sans-serif;
}

/* STYLING */

html {
	font-family: var(--font-default);
	background: var(--dark);
	color: var(--light);
}

h1,
h2 {
	font-family: var(--font-decorative);
	font-size: 3rem;
	line-height: 4rem;
}

a {
	color: var(--primary);
	font-weight: bold;
}

a:hover,
a:active {
	color: var(--dark);
	background-color: var(--secondary);
	border-radius: 4px;
}

a:focus {
	border: 2px dotted var(--secondary);
}

nav {
	text-align: right;
	padding: 1rem;
	margin-top: 0.5rem;
}

main {
	margin: 0px auto;
	width: 100%;
	max-width: 1440px;
}

footer {
	text-align: center;
	padding: 1rem;
}

/* SECTIONS */

.intro {
	text-align: center;
	/*  Temporary footer and header */
	min-height: calc(100vh - 128px);
}

.intro--inner {
	max-width: 640px;
	padding: 1rem;
	position: relative;
}

/* UTIL CLASSES */
.decorative--secondary {
	color: var(--secondary);
}

.decorative--primary {
	color: var(--primary);
}

.flex {
	display: flex;
}

.column {
	flex-direction: column;
}

.center {
	justify-content: center;
	align-items: center;
}

.gap {
	gap: 0.5rem;
}

/* BUTTONS */

.btn {
	padding: 8px 16px;
	border-radius: 4px;
	text-transform: uppercase;
	text-decoration: none;
	transition: all 0.2s ease-in;
}

.btn--primary {
	border: 2px solid var(--primary);
}

.btn--primary:hover {
	background: var(--secondary);
	color: var(--dark);
	border-color: var(--secondary);
}

/* FANCY TOUCH */

::selection {
	background-color: var(--secondary);
	color: var(--dark);
}

.bg-decor--dots {
	width: 100%;
	height: 100%;
	background-image: url(assets/dots.svg);
	background-repeat: repeat-x;
	background-position: 0% 50%;
	opacity: 0.6;
	position: absolute;
	top: 0;
	right: 60%;
}

.bg-decor--sphere {
	background-image: url(assets/sphere.png);
	background-size: cover;
	background-repeat: no-repeat;
	position: absolute;
	opacity: 0.4;
}

.bg-decor--sphere-l {
	height: 120px;
	width: 120px;
	top: -150px;
	right: -15%;
}

.bg-decor--sphere-m {
	height: 80px;
	width: 80px;
	top: 150px;
	right: -23%;
	opacity: 0.2;
}

.bg-decor--sphere-s {
	height: 40px;
	width: 40px;
	top: 20px;
	right: 5%;
	opacity: 0.1;
}

